# home_monitor

./: .gitignore  Cargo.toml  README.md
src/: 404.html  config.rs  index.html  main.rs  master_functions.rs  slave_functions.rs  test.rs
src/web/: index.html
src/web/js/: update_request.js
